--- a/FlaskLibraryWebsite/static/style3.css
+++ b/FlaskLibraryWebsite/static/style3.css
@@ -1,1 +1,125 @@
+/* filename: style3.css
+   Final project CSC217-Python FlaskLibrary
+   Amandine Velamala */
 
+html {
+    font-family: Verdana, Arial, sans-serif;
+    color: #333;
+    line-height: 1.5;
+}
+ul{
+    list-style-type:none;
+    padding-inline-start: 0px;
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+nav{
+    background-color: LightSlateGray;
+    color: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.navContent{
+    max-width: 600px;
+    margin: auto;
+}
+nav a{
+    text-decoration: none;
+    color: white;
+    padding: 15px;
+}
+nav a:hover {
+    color: DarkOrange;
+}
+.error{
+    background-color: #FFCDD2;
+}
+.success{
+    background-color: #C8E6C9;
+}
+.alerts{font-size
+    font-size: 14px;
+    max-width: 600px;
+    margin: auto;
+    padding: 6px;
+}
+form {
+  max-width: 600px;
+  margin: auto;
+
+}
+label {
+    display:block;
+    padding-bottom: 4px;
+    padding-to: 8px;
+}
+input, textarea {
+    width: 90%;
+    margin: auto;
+    border: 1px solid LightSlateGray;
+    margin-bottom: 10px;
+    padding: 8px;
+}
+select {
+    border: 1px solid LightSlateGray;
+    margin-bottom: 10px;
+    padding: 6px;
+}
+.submit {
+    padding: 8px;
+    width: 150px;
+    color: white;
+    background: #FF8F00;
+    font-size: 16px;
+    border: 1px solid LightSlateGray;
+    border-radius: 4px;
+}
+.submit:hover {
+  background: #E65100;
+}
+
+.medWidth{
+    max-width  : 600px;
+       margin: auto;
+}
+
+.bookDisplayBox {
+
+    max-width: 600px;
+    margin: auto;
+    background-color: whitesmoke;
+    display: grid;
+    grid-template-columns: 15fr 5fr;
+    grid-template-rows: 1fr auto;
+    padding: 8px;
+    margin-bottom: 12px;
+}
+.bookDesc {
+  font-size: 15px;
+  grid-column: 1/2;
+  grid-row: 1;
+  width: 100%;
+}
+.bookButton {
+  grid-column: 2/2;
+  grid-row: 1;
+}
+.borrowStatusBtn{
+    padding: 8px;
+    width: 150px;
+   border: 1px solid LightSlateGray;
+    border-radius: 4px;
+}
+.checkin {
+    background: #FFCDD2;
+}
+.checkout {
+    background: #C8E6C9;
+}
+.bookDetails {
+    font-size: 12px;
+}
+.lateFee {
+    color: red;
+    font-size: 14px;
+}
